SONARPHP-1806 Fix S117 FP and S116 FN on PHP 8 constructor property promotion (#1674)
Co-authored-by: Claude Sonnet 4.6 (1M context) <noreply@anthropic.com>